--- a/doc/数组.md
+++ b/doc/数组.md
@@ -8,7 +8,8 @@
    1.可以用字符串对象来存储 {}
    2.可以用哈希表来存储 map
    用map存储最比对的效率更高。
-   
+   **![image](https://user-images.githubusercontent.com/15663474/169239440-c18ec1bb-d74f-4b89-a2d1-fbf0761dd167.png)
+**
    ```
    //使用数组标记差值
  var twoSum = function(nums, target) {
