[删除有序数组中的重复项]

--- a/doc/数组.md
+++ b/doc/数组.md
@@ -49,4 +49,53 @@ var twoSum3 = function(nums, target) {
     }
 };
    ```
-   
+## 26. 删除有序数组中的重复项
+
+### 方法1--利用哈希表和数组剪裁
+   1.只能在nums上操作。不能使用“=”直接赋值。
+   2.用哈希表将被过滤的元素记录下来。
+   3.把重复的元素删除。
+   4.直接操作数组，会使数组的长度一直在变化，同个下标对应的元素值也会有变化。
+```
+var removeDuplicates = function (nums) {
+    let map = new Map();
+    let count = 0;
+    for (var i = 0; i < nums.length; i++) {
+        if (!map.has(nums[i])) {
+            map.set(nums[i], i);
+            count++;
+        }
+    }
+    console.log('map=', map)
+    map.forEach((index, key) => {
+        nums.push(key)
+    })
+    console.log('nums111=', nums)
+    nums.splice(0, nums.length - count)
+
+    console.log('nums111=', nums)
+    return count;
+
+};
+```
+
+### 方法2--利用双指针
+> 使用快慢指针，快指针往后走，碰到不重复的元素，将元素赋值给慢指针，慢指针往下走一步，快指针走完数组，慢指针走的就是不重复的数组。
+```
+var removeDuplicates2 = function (nums) {
+   const n= nums.length;
+   if(n<2){
+       return n;
+   }
+   let fast = 1, slow=1;
+   while(fast<n){
+       //和前一个元素不同
+       if(nums[fast]!=nums[fast-1]){
+           nums[slow]=nums[fast];
+           ++slow;
+       }
+       ++fast;
+   }
+   return slow;
+};
+```   
