--- a/doc/数组.md
+++ b/doc/数组.md
@@ -99,3 +99,23 @@ var removeDuplicates2 = function (nums) {
    return slow;
 };
 ```   
+## 27. 移除元素
+>先将数字数组排序，然后找出val在nums中的头尾坐标，裁剪掉相同的元素即可
+>也可以使用双指针方法，同 ## 26. 删除有序数组中的重复项
+```
+var removeElement = function (nums, val) {
+    if (!nums || nums.length == 0) {
+        return 0;
+    }
+    nums = nums.sort();//[1,2,2,3,3,5,6]
+    let first = nums.indexOf(val);
+    if (first == -1) {
+        return nums.length;
+    }
+    let last = nums.lastIndexOf(val);
+    nums.splice(first, last - first + 1);
+    return nums.length;
+
+};
+
+```
