--- a/doc/数组.md
+++ b/doc/数组.md
@@ -100,9 +100,10 @@ var removeDuplicates2 = function (nums) {
 };
 ```   
 ## 27. 移除元素
->先将数字数组排序，然后找出val在nums中的头尾坐标，裁剪掉相同的元素即可
->也可以使用双指针方法，同 ## 26. 删除有序数组中的重复项
+### 先将数字数组排序，然后找出val在nums中的头尾坐标，裁剪掉相同的元素即可
+### 方法2--利用双指针 同 26. 删除有序数组中的重复项
 ```
+
 var removeElement = function (nums, val) {
     if (!nums || nums.length == 0) {
         return 0;
